Build comprehensive StudyMate prototype

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,58 @@
 <resources>
-    <string name="app_name">StudyMate2</string>
+    <string name="app_name">StudyMate</string>
     <string name="default_web_client_id">YOUR_CLIENT_ID_HERE</string>
+    <string name="nav_dashboard">Dashboard</string>
+    <string name="nav_planner">Planner</string>
+    <string name="nav_resources">Resources</string>
+    <string name="nav_settings">Settings</string>
+    <string name="dashboard_default_greeting">Hello, scholar!</string>
+    <string name="dashboard_greeting_with_name">Hello, %1$s!</string>
+    <string name="dashboard_quote">"Small progress each day adds up to big results."</string>
+    <string name="dashboard_progress">Weekly progress</string>
+    <string name="dashboard_progress_placeholder">You have not added any study sessions yet.</string>
+    <string name="dashboard_focus_timer">Focus timer</string>
+    <string name="dashboard_start">Start</string>
+    <string name="dashboard_pause">Pause</string>
+    <string name="dashboard_reset">Reset</string>
+    <string name="dashboard_upcoming">Upcoming focus sessions</string>
+    <string name="dashboard_no_tasks">Add a task in the planner to see it here.</string>
+    <string name="planner_subtitle">Organise your week by adding focused study sessions.</string>
+    <string name="planner_empty">You have not scheduled any tasks yet. Tap the + button to begin.</string>
+    <string name="planner_add_task">Add study task</string>
+    <string name="planner_delete">Delete study task</string>
+    <string name="planner_delete_confirm">Are you sure you want to remove this study session?</string>
+    <string name="planner_task_title_hint">Topic or task</string>
+    <string name="planner_task_subject_hint">Subject</string>
+    <string name="planner_due_date_placeholder">Pick a due date</string>
+    <string name="planner_pick_date">Choose date</string>
+    <string name="planner_duration_hint">Estimated focus time (minutes)</string>
+    <string name="planner_error_required">Please complete all fields to continue.</string>
+    <string name="planner_error_duration">Enter a positive focus duration.</string>
+    <string name="planner_saved">Study session scheduled!</string>
+    <string name="planner_deleted">Study session removed.</string>
+    <string name="resources_subtitle">Curated study prompts pulled from your connected StudyMate API.</string>
+    <string name="resources_empty_state">No online study tips were retrieved. Check your connection and refresh.</string>
+    <string name="resources_completed">Completed</string>
+    <string name="resources_suggested">Suggested focus</string>
+    <string name="settings_account_name_placeholder">Learner</string>
+    <string name="settings_notifications">Study reminders</string>
+    <string name="settings_enable_notifications">Enable daily reminder notification</string>
+    <string name="settings_reminder_time_placeholder">Reminder set for 18:00</string>
+    <string name="settings_change_time">Change time</string>
+    <string name="settings_display_name_hint">Display name</string>
+    <string name="settings_update_display_name">Update display name</string>
+    <string name="settings_sign_out">Sign out</string>
+    <string name="login_title">Welcome to StudyMate</string>
+    <string name="login_subtitle">Sign in with your student account to continue.</string>
+    <string name="login_logo">StudyMate logo</string>
+    <string name="settings_notifications_enabled">Notifications enabled</string>
+    <string name="settings_notifications_disabled">Notifications disabled</string>
+    <string name="settings_reminder_updated">Reminder scheduled for %1$02d:%2$02d</string>
+    <string name="settings_display_name_updated">Display name updated</string>
+    <string name="settings_display_name_invalid">Enter a display name to continue.</string>
+    <string name="settings_sign_out_confirmation">Are you sure you want to sign out?</string>
+    <string name="settings_sign_out_positive">Sign out</string>
+    <string name="settings_sign_out_negative">Cancel</string>
+    <string name="dashboard_progress_value">%1$d of %2$d focus sessions completed</string>
+    <string name="auth_required">Please sign in to continue.</string>
 </resources>
