--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">StudyMate</string>
-    <string name="default_web_client_id">YOUR_CLIENT_ID_HERE</string>
+    <string name="default_web_client_id">869054972153-dd3rsov5qs71i2e0b5n4ojv5g1htvq61.apps.googleusercontent.com</string>
     <string name="nav_dashboard">Dashboard</string>
     <string name="nav_planner">Planner</string>
     <string name="nav_resources">Resources</string>
