Localize calendar permission prompts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,24 @@
     <string name="planner_error_duration">Enter a positive focus duration.</string>
     <string name="planner_saved">Study session scheduled!</string>
     <string name="planner_deleted">Study session removed.</string>
+    <string name="planner_generate_timetable">Smart timetable</string>
+    <string name="planner_view_list">List</string>
+    <string name="planner_view_week">Week</string>
+    <string name="planner_view_month">Month</string>
+    <string name="planner_timetable_empty">Generate a smart timetable to fill your week.</string>
+    <string name="planner_timetable_generated">Smart timetable updated.</string>
+    <string name="planner_timetable_empty_message">Add tasks or adjust due dates to create a timetable.</string>
+    <string name="planner_task_meta">%1$s • %2$d min • %3$d days to go</string>
+    <string name="planner_block_time">%1$s • %2$s – %3$s</string>
+    <string name="planner_task_type_title">What type of focus session is this?</string>
+    <string name="planner_calendar_subject">%1$s • %2$s</string>
+    <string name="planner_calendar_due">Due %1$s</string>
+    <string name="planner_calendar_empty">No sessions planned for this day yet.</string>
+    <string name="planner_calendar_permission_prompt">Grant calendar permission to sync tasks.</string>
+    <string name="planner_calendar_provider_missing">No calendar provider found.</string>
+    <string name="planner_calendar_not_found">No writable calendars found on this device.</string>
+    <string name="planner_calendar_added">Added to Google Calendar!</string>
+    <string name="planner_calendar_failed">Failed to add event.</string>
     <string name="resources_subtitle">Curated study prompts pulled from your connected StudyMate API.</string>
     <string name="resources_empty_state">No online study tips were retrieved. Check your connection and refresh.</string>
     <string name="resources_completed">Completed</string>
@@ -42,6 +60,11 @@
     <string name="settings_display_name_hint">Display name</string>
     <string name="settings_update_display_name">Update display name</string>
     <string name="settings_sign_out">Sign out</string>
+    <string name="settings_language_title">Language</string>
+    <string name="settings_language_hint">Choose your preferred language</string>
+    <string name="settings_language_applied">Language updated.</string>
+    <string name="language_english">English</string>
+    <string name="language_isizulu">isiZulu</string>
     <string name="login_title">Welcome to StudyMate</string>
     <string name="login_subtitle">Sign in with your student account to continue.</string>
     <string name="login_logo">StudyMate logo</string>
@@ -55,4 +78,28 @@
     <string name="settings_sign_out_negative">Cancel</string>
     <string name="dashboard_progress_value">%1$d of %2$d focus sessions completed</string>
     <string name="auth_required">Please sign in to continue.</string>
+    <string name="task_type_assignment">Assignment</string>
+    <string name="task_type_exam">Exam</string>
+    <string name="task_type_revision">Revision</string>
+    <string name="analytics_title">Analytics</string>
+    <string name="analytics_weekly_hours">Weekly study hours</string>
+    <string name="analytics_insight">You spent %1$d%% of your study time on %2$s last week. Balance your subjects wisely.</string>
+    <string name="analytics_insight_placeholder">Generate tasks to unlock personalised insights.</string>
+    <string name="analytics_no_data">Add study sessions to see your analytics.</string>
+    <string name="login_highlight_notifications">Never miss a deadline with smart reminders for assignments and exams.</string>
+    <string name="login_highlight_calendar">Auto-build weekly study plans from your tasks.</string>
+    <string name="login_highlight_analytics">Understand your progress with visual dashboards.</string>
+    <string name="login_feature_title">Why learners love StudyMate</string>
+    <string name="login_language_hint">Switch between English and isiZulu anytime in Settings.</string>
+    <string name="calendar_permission_granted">Calendar access granted</string>
+    <string name="calendar_permission_denied">Calendar access denied</string>
+    <string name="notification_channel_daily_name">Daily study reminders</string>
+    <string name="notification_channel_daily_desc">Gentle nudges to keep your study streak alive.</string>
+    <string name="notification_channel_deadline_name">Upcoming deadlines</string>
+    <string name="notification_channel_deadline_desc">Alerts for urgent assignments and exam countdowns.</string>
+    <string name="notification_daily_title">Today\'s focus</string>
+    <string name="notification_daily_body">Next up: %1$s due in %2$d days. Let\'s get started!</string>
+    <string name="notification_assignment_title">Assignment due soon</string>
+    <string name="notification_assignment_body">%1$s is due in %2$d days. Plan a study block today.</string>
+    <string name="notification_exam_countdown">%1$d days until your %2$s exam.</string>
 </resources>
